updated fields and disabled delivered item from seletion and save button adjustment

--- a/webapp/view/AsnCreation.view.xml
+++ b/webapp/view/AsnCreation.view.xml
@@ -169,7 +169,7 @@
                             <Toolbar>
                                 <Title text="Files" level="H2"/>
                                 <ToolbarSpacer/>
-                                <Button text="Upload" press="onUpload"/>
+                                <Button class="sapUiLargeMarginEnd" type="Success" icon="sap-icon://upload-to-cloud" text="Upload" press="onUpload"/>
                                 <Button id="btnDownload" text="Download" enabled="false" visible="false" press="onDownload"/>
                                 <Button id="btnDelete" text="Delete" enabled="false" visible="false" press="onDelete"/>
                             </Toolbar>
