--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -57,3 +57,14 @@
 .filterbarTabAsn .sapMITBSelected .sapMITBContentArrow::after {
     background: rgb(3, 100, 197) !important;
 }
+
+/* Gray background for disabled rows */
+.rowDisabled {
+    background-color: #f2f2f2 !important;
+    opacity: 0.7;
+}
+
+/* Optional: change text color */
+.rowDisabled .sapMText {
+    color: #000000 !important;
+}
