updated material search and few fields

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -68,3 +68,8 @@
 .rowDisabled .sapMText {
     color: #000000 !important;
 }
+
+.smallTitle {
+    font-size: 1rem !important;
+    font-weight: 600;
+}
