--- a/webapp/view/AsnSaCreation.view.xml
+++ b/webapp/view/AsnSaCreation.view.xml
@@ -67,7 +67,7 @@
                             <DatePicker id="idRAPO_InvDate" width="75%" placeholder="Select Date" displayFormat="dd-MM-yyyy" enabled="true" class="sapUiSmallMarginBottom"/>
                         </VBox>
                         <VBox id="_IDGenVBox31" width="20%">
-                            <Label id="_IDGenLabel40" text="Vehical Number" required="true"/>
+                            <Label id="_IDGenLabel40" text="Vehicle Number" required="true"/>
                             <Input id="idRAPO_VehicalNo" maxLength="10" width="75%"/>
                         </VBox>
                         <VBox id="_IDGenVBox32" width="20%">
