--- a/webapp/view/AsnSaCreation.view.xml
+++ b/webapp/view/AsnSaCreation.view.xml
@@ -40,7 +40,7 @@
                     <HBox id="_IDGenHBox9">
                         <VBox id="_IDGenVBox29" width="20%">
                             <Label id="_IDGenLabel38" text="Invoice Number" required="true"/>
-                            <Input id="idDocInvNo" value="" change="onChangeDocInvNo" maxLength="16" width="75%"/>
+                            <Input id="idDocInvNo" value="" change="onChangeDocInvNo" maxLength="16" width="75%" liveChange="convertToCaps"/>
                         </VBox>
 
                         <VBox id="_IDGenVBox25" width="20%">
@@ -68,7 +68,7 @@
                         </VBox>
                         <VBox id="_IDGenVBox31" width="20%">
                             <Label id="_IDGenLabel40" text="Vehicle Number" required="true"/>
-                            <Input id="idRAPO_VehicalNo" maxLength="10" width="75%"/>
+                            <Input id="idRAPO_VehicalNo" maxLength="10" width="75%" liveChange="convertToCaps"/>
                         </VBox>
                         <VBox id="_IDGenVBox32" width="20%">
                             <Label id="_IDGenLabel41" text="Transporter" required="true"/>
